[package]
name = "ssl-logtools-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
protobuf = "3.7.2"
skia-safe = "0.91.0"
tempfile = "3.23.0"
which = "8.0.0"

[build-dependencies]
glob = "0.3.3"
protobuf-codegen = "3.7.2"
